small loader design change

--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -72,9 +72,7 @@
             onclick="countryPredict()">Predict</button>
         </div>
         <div id="loadingGif" hidden>
-            <div id="loadAnimation" class="spinner-border" hidden>
-            <!-- <span class="sr-only ">Loading...</span> -->
-            </div>
+            <div class="spinner-border"></div>
         </div>
         <p id="output"></p>
         <p text-align="center" id="warning">
