Many changes noticably added footer

--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="CSS/inputs.css">
     <link rel="stylesheet" href="CSS/historyArea.css">
     <link rel="stylesheet" href="/CSS/containerMobile.css">
+    <link rel="stylesheet" href="./CSS/footer.css">
     <link rel="stylesheet" href="/CSS/loading_anim.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
@@ -63,7 +64,7 @@
 
 <div id="containerOuterlayer">
     <div id="container" class="show">
-        <h3>Country Predictor</h3>
+        <h2>Country Predictor</h2>
         <div><input type="text" id="country" placeholder="Enter the first name here! " />
             <button type="button" class="btnTransform" id="predictB" 
             onmousedown="btnSize(true)"
@@ -81,6 +82,11 @@
         <button type="button" id="showHB"
         onclick="showHistory()">Show History</button>
     </div>
+</div>
+<div id="footer">
+<div class="footer" >
+    <p>Gaurab Dhakal &copy; 2024</p>
+</div>
 </div>
 </body>
 <script src="JS/country_predictor.js"></script>
