--- a/SEE_Result.html
+++ b/SEE_Result.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="CSS/container.css">
     <link rel="stylesheet" href="CSS/inputs.css">
     <link rel="stylesheet" href="CSS/historyArea.css">
+    <link rel="stylesheet" href="./CSS/footer.css">
     <title>SEE Result Checker 2079/80</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
@@ -49,7 +50,7 @@
     </div>
 </div>
     <div id="container">
-        <h3 align="center"><strong> SEE Result Checker 2079/80</strong></h3>
+        <h2 align="center"><strong> SEE Result Checker 2079/80</strong></h2>
         <br />
         <div id="inpArea">
             <label for="name">Enter Symbol Number</label><br>
