--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="CSS/inputs.css">
     <link rel="stylesheet" href="/CSS/containerMobile.css">
     <link rel="stylesheet" href="/CSS/loading_anim.css">
+    <link rel="stylesheet" href="./CSS/footer.css">
     <title>Gender Predictor</title>
     <style>
        @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
@@ -42,7 +43,7 @@
         </nav>
     </div>
     <div id="container">
-        <h3 align="center" style="margin-bottom: 10px;">Gender Predictor</h3>
+        <h2 align="center" style="margin-bottom: 10px;">Gender Predictor</h2>
         <br />
         <div>
             <input type="text" id="name" placeholder="Enter the first name here! " />
@@ -59,6 +60,9 @@
             Note: In some cases, the requested result may not be displayed due to
             absence of the data of the name.
         </p>
+    </div>
+    <div class="footer">
+        <p>Gaurab Dhakal &copy; 2024</p>
     </div>
 </body>
 <script src="./JS/gender_guesser.js"></script>
