--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <link rel="stylesheet" href="./CSS/index.css" />
 <link rel="stylesheet" href="./CSS/navbar.css" />
 <link rel="stylesheet" href="./CSS/calcMobileDesign.css" />
+<link rel="stylesheet" href="./CSS/footer.css">
 <body>
     <div id="navbar">
         <nav>
@@ -51,7 +52,7 @@
         </div>
         <form>
         <div class="calculator" hidden>
-            <h3 id="heading">Calculator V.2</h3>
+            <h2 id="heading">Calculator V.2</h2>
             <label>Number 1: </label>
             <input type="number" id="usrinp_1" placeholder="Enter Your Number" minlength="1" onkeydown="nextElem(event,'usrinp_2')"/><br />
             <label>Number 2: </label>
@@ -72,6 +73,9 @@
             <p id="outputhere"></p>
         </div>
     </div>
+</div>
+<div class="footer">
+    <p>Gaurab Dhakal &copy; 2024</p>
 </div>
 </body>
 <script src="./JS/index._main.js" type="text/javascript"></script>
