--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="CSS/inputs.css">
     <link rel="stylesheet" href="/CSS/containerMobile.css">
     <link rel="stylesheet" href="/CSS/loading_anim.css">
+    <link rel="stylesheet" href="./CSS/footer.css">
     <title>Youtube Dislike Return</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
@@ -42,7 +43,7 @@
         </nav>
     </div>
     <div id="container">
-        <h3 align="center" style="margin-bottom: 15px;">Youtube Dislike Return</h3>
+        <h2 align="center" style="margin-bottom: 15px;">Youtube Dislike Return</h2>
         <br />
         <div>
             <label for="name">Enter Video ID :</label><br>
@@ -62,6 +63,9 @@
             link "<b>kxOuG8jMIgI</b>" is
             the ID.
         </p>
+    </div>
+    <div class="footer">
+        <p>Gaurab Dhakal &copy; 2024</p>
     </div>
 </body>
 <script src="JS/ytdr.js"></script>
