Organized the mess of Font-Familys

--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -16,14 +16,8 @@
     <link rel="stylesheet" href="/CSS/containerMobile.css">
     <link rel="stylesheet" href="/CSS/loading_anim.css">
     <link rel="stylesheet" href="./CSS/footer.css">
+    <link rel="stylesheet" href="/CSS/universalFontFamily.css">
     <title>Gender Predictor</title>
-    <style>
-       @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
-        body {
-            font-family: 'Titillium Web', sans-serif;
-        }
-
-    </style>
 </head>
 
 <body>
