--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <link rel="stylesheet" href="./CSS/navbar.css" />
 <link rel="stylesheet" href="./CSS/calcMobileDesign.css" />
 <link rel="stylesheet" href="./CSS/footer.css">
+<link rel="stylesheet" href="/CSS/universalFontFamily.css">
 <body>
     <div id="navbar">
         <nav>
