--- a/ria_result.html
+++ b/ria_result.html
@@ -13,11 +13,9 @@
         <link rel="stylesheet" href="CSS/extras.css">
         <link rel="stylesheet" href="CSS/container.css">
         <link rel="stylesheet" href="CSS/inputs.css">
+        <link rel="stylesheet" href="/CSS/universalFontFamily.css">
 </head>
 <body>
-    <style>
-        /* body { margin-top: 0; } */
-    </style>
     <div id="navbar">
         <nav>
             <div class="logo">Gaurab Dhakal</div>
