--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -17,11 +17,8 @@
     <link rel="stylesheet" href="/CSS/containerMobile.css">
     <link rel="stylesheet" href="./CSS/footer.css">
     <link rel="stylesheet" href="/CSS/loading_anim.css">
+    <link rel="stylesheet" href="/CSS/universalFontFamily.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
-        body {
-            font-family: 'Titillium Web', sans-serif;
-        }
         h3{
             text-align: center;
             margin-bottom: 15px;
