--- a/SEE_Result.html
+++ b/SEE_Result.html
@@ -16,13 +16,8 @@
     <link rel="stylesheet" href="CSS/inputs.css">
     <link rel="stylesheet" href="CSS/historyArea.css">
     <link rel="stylesheet" href="./CSS/footer.css">
+    <link rel="stylesheet" href="/CSS/universalFontFamily.css">
     <title>SEE Result Checker 2079/80</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
-        body {
-            font-family: 'Titillium Web', sans-serif;
-        }
-    </style>
 </head>
 
 <body>
