--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </head>
 <style>
     body{
-        background-size: 100% 100%;
-    background-image: url("https://wallpapers.com/images/high/abstract-background-yxuswaw0j0i2qanj.webp");
+        background: fixed;
+        background-size: 100% 100% ;
+        background-image: url("./Assests/bgImg.jpg");
     }
 </style>
 <link rel="stylesheet" href="./CSS/index.css" />
