changed the design of the result area

--- a/cookies1223.html
+++ b/cookies1223.html
@@ -12,9 +12,12 @@
         margin: 0;
     }
     h3{
-        margin: 10px;
+        margin: 0 0 10px 0px;
         background-color: black;
         padding: 10px;
+        font-family: 'Signika Negative', sans-serif;
+        font-weight: 300;
+        font-stretch: normal;
         color: white;
         text-align: center;
     }
@@ -168,7 +171,7 @@
             console.log('Text copied to clipboard!');
             document.body.removeChild(textArea)
             copiedArea.hidden = false;
-            let string = "Copied and gayera paste garw!";
+            let string = "Copied aaba gayera paste garw!";
             let i =0;
             if(intervalId1||intervalId2){
                 clearInterval(intervalId1);
