Design and system change in container and country predictor

--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -72,7 +72,7 @@
         <div id="loadingGif" hidden>
             <div class="spinner-border"></div>
         </div>
-        <p id="output"></p>
+        <div id="output"></div>
         <p text-align="center" id="warning">
             Note: In some cases, the requested result may not be displayed due to absence of the data of the name in the
             API.</p>
