--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href=
-    "/Assests/logo.png" type="image/x-icon">
+    <link rel="icon" href="/Assests/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    
+
     <title>Gaurab Dhakal</title>
 </head>
 <style>
-    body{
+    body {
         background: fixed;
-        background-size: 100% 100% ;
+        background-size: 100% 100%;
         background-image: url("./Assests/bgImg.jpg");
     }
 </style>
@@ -22,7 +21,9 @@
 <link rel="stylesheet" href="./CSS/navbar.css" />
 <link rel="stylesheet" href="./CSS/calcMobileDesign.css" />
 <link rel="stylesheet" href="./CSS/footer.css">
+<link rel="stylesheet" href="./CSS/calcv3.css">
 <link rel="stylesheet" href="/CSS/universalFontFamily.css">
+
 <body>
     <div id="navbar">
         <nav>
@@ -35,63 +36,113 @@
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="CountryPredictor.html">Country Predictor</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
-                <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
+                <li><a href="youtubeDislikeReturn.html">Youtube Dislike Return</a></li>
             </ul>
         </nav>
     </div>
     <br />
     <br />
     <div class="forMobDivCalc">
-    <div id="divcalculator">
-        <h2 class="selectCalcH2">Select the version!</h2>
-        <div>
-            <button type="button" class="toggle hideShowToggle" onclick="toggle()">
-            Calculator V.2
+        <div id="divcalculator">
+            <h2 class="selectCalcH2">Select the version!</h2>
+            <div>
+                <button type="button" class="toggle v1" onclick="calc2()">
+                    Calculator V.1
+                </button>
+                <button type="button" class="toggle hideShowToggle" onclick="toggle(`.calculator`,`.hideShowToggle`,`.hideShowToggle2`)">
+                    Calculator V.2
+                </button>
+                <button type="button" class="toggle hideShowToggle2"
+                onclick="toggle(`.MainCalcBody1`,`.hideShowToggle2`,`.hideShowToggle`)">
+                Calculator V.3
             </button>
-            <button type="button" class="toggle" onclick="calc2()">
-                Calculator V.1
-            </button>
-        </div>
-        <form>
-        <div class="calculator" hidden>
-            <h2 id="heading">Calculator V.2</h2>
-            <label>Number 1: </label>
-            <input type="number" id="usrinp_1" placeholder="Enter Your Number" minlength="1" onkeydown="nextElem(event,'usrinp_2')"/><br />
-            <label>Number 2: </label>
-            <input type="number" id="usrinp_2" placeholder="Enter Your Number" minlength="1" /><br />
-            <label>Operator: </label>
-            <select id="operator">
-                <option value="+">+</option>
-                <option value="-">-</option>
-                <option value="*">*</option>
-                <option value="/">/</option>
-            </select>
-            <br />
-            <span class="buttonsArea">
-            <button type="button" class="hideUponClick" onclick="giveOutput()">Calculate</button>
-            <button type="reset" class="hideUponClick" onclick="clearOTA()">Reset</button></span>
-        </form>  
+            </div>
+            <form>
+                <!-- Calculator Version 2 starts -->
+                <div class="calculator" hidden>
+                    <h2 id="heading">Calculator V.2</h2>
+                    <label>Number 1: </label>
+                    <input type="number" id="usrinp_1" placeholder="Enter Your Number" minlength="1"
+                        onkeydown="nextElem(event,'usrinp_2')" /><br />
+                    <label>Number 2: </label>
+                    <input type="number" id="usrinp_2" placeholder="Enter Your Number" minlength="1" /><br />
+                    <label>Operator: </label>
+                    <select id="operator">
+                        <option value="+">+</option>
+                        <option value="-">-</option>
+                        <option value="*">*</option>
+                        <option value="/">/</option>
+                    </select>
+                    <br />
+                    <span class="buttonsArea">
+                        <button type="button" class="hideUponClick" onclick="giveOutput()">Calculate</button>
+                        <button type="reset" class="hideUponClick" onclick="clearOTA()">Reset</button></span>
+            </form>
             <br />
             <p id="outputhere"></p>
         </div>
+        <!-- Calculator Version 2 ends -->
+
+        <!-- Calculator Version 3 Starts  -->
+        <div class="MainCalcBody1" hidden>
+            <div class="MainCalcBody" hidden>
+                <h3>Calculator V3</h3>
+                <div class="inputOutput">
+                    <input type="text" readonly>
+                </div>
+                <div class="calcBody">
+                    <div class="row row-1">
+                        <div class="column column-1 column-1-1">7</div>
+                        <div class="column column-2 column-2-1">4</div>
+                        <div class="column column-3 column-3-1">1</div>
+                        <div class="column column-4 column-4-1">0</div>
+                    </div>
+                    <div class="row row-2">
+                        <div class="column column-1 column-1-2">8</div>
+                        <div class="column column-2 column-2-2">5</div>
+                        <div class="column column-3 column-3-2">2</div>
+                        <div class="column column-4 column-4-2">.</div>
+                    </div>
+                    <div class="row row-3">
+                        <div class="column column-1 column-1-3">9</div>
+                        <div class="column column-2 column-2-3">6</div>
+                        <div class="column column-3 column-3-3">3</div>
+                        <div class="column column-4 column-4-3">B</div>
+                    </div>
+                    <div class="row row-4">
+                        <div class="column column-1 column-1-4">DEL</div>
+                        <div class="column column-2 column-2-4">×</div>
+                        <div class="column column-3 column-3-4">+</div>
+                        <div class="column column-4 column-4-4">Ans</div>
+                    </div>
+                    <div class="row row-5">
+                        <div class="column column-1 column-1-5">AC</div>
+                        <div class="column column-2 column-2-5">÷</div>
+                        <div class="column column-3 column-3-5">-</div>
+                        <div class="column column-4 column-4-5"> = </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-<div class="footer">
-    <p>Gaurab Dhakal &copy; 2024</p>
-</div>
+    </div>
+    <div class="footer">
+        <p>Gaurab Dhakal &copy; 2024</p>
+    </div>
 </body>
 <script src="./JS/index._main.js" type="text/javascript"></script>
+<script src="./JS/calcv3.js"></script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7760784539111054"
     crossorigin="anonymous"></script>
-    
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HLH5Q0M1F5"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-HLH5Q0M1F5');
+    gtag('config', 'G-HLH5Q0M1F5');
 </script>
 
 </html>
