Major Update: Weather Checker Added

--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -38,6 +38,7 @@
                 <li><a href="#"  class="active">Country Predictor</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
                 <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
+                <li><a href="weather.html" >Weather Checker</a></li>
             </ul>
         </nav>
         </div>
