--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -33,6 +33,7 @@
                 <li><a href="CountryPredictor.html">Country Predictor</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
                 <li><a href="youtubeDislikeReturn.html" class="active">Youtube Dislike Return</a></li>
+                <li><a href="weather.html" >Weather Checker</a></li>
             </ul>
         </nav>
     </div>
@@ -46,11 +47,6 @@
             onmouseup="btnSize(false)" 
             onmouseleave="btnSize(false)" onclick="dislikeReturn()">Show</button>
         </div> 
-        <div id="loadingGif" hidden>
-            <div class="spinner-border" class="" role="status">
-                <span class="sr-only"></span>
-            </div>  
-        </div>
         <p id="output"></p>
         <p align="center" id="warning">
             Guide -> ID of a video is: For example <br> "<b><a rel="noopener" href="https://www.youtube.com/watch?v=kxOuG8jMIgI" target="_blank">https://www.youtube.com/watch?v=kxOuG8jMIgI</a></b>" <br> in this
