--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -33,6 +33,7 @@
                 <li><a href="CountryPredictor.html" >Country Predictor</a></li>
                 <li><a href="genderGuesser.html"  class="active">Gender Predictor</a></li>
                 <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
+                <li><a href="weather.html" >Weather Checker</a></li>
             </ul>
         </nav>
     </div>
