--- a/weather.html
+++ b/weather.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/Assests/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <title>Weather Forecast</title>
     <link rel="stylesheet" href="/CSS/weatherPage.css">
 </head>
@@ -37,8 +39,8 @@
     <link rel="stylesheet" href="./CSS/footer.css">
     <link rel="stylesheet" href="/CSS/loading_anim.css">
     <link rel="stylesheet" href="/CSS/universalFontFamily.css">
-
-    <div class="container containerWeatherPage">
+<div class="containerWeatherPageParent">
+    <div class="container containerWeatherPageBody">
         <h3>Weather Checker</h3>
         <form class="weatherForm">
             <input type="text" class="usrInp" placeholder="Enter the city" />
@@ -54,6 +56,7 @@
             </div>
         </div>
     </div>
+</div>
     <div id="footer">
         <div class="footer" >
             <p>Gaurab Dhakal &copy; 2024</p>
