--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="./CSS/navbar.css" />
-    <link rel="stylesheet" href="CSS/buttons.css">
-    <link rel="stylesheet" href="CSS/tables.css">
+    <link rel="stylesheet" href="./CSS/buttons.css">
+    <link rel="stylesheet" href="./CSS/tables.css">
     <link rel="icon" href=
-    "/Assests/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="CSS/extras.css">
-    <link rel="stylesheet" href="CSS/container.css">
-    <link rel="stylesheet" href="CSS/inputs.css">
-    <link rel="stylesheet" href="/CSS/containerMobile.css">
-    <link rel="stylesheet" href="/CSS/loading_anim.css">
+    "./Assests/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./CSS/extras.css">
+    <link rel="stylesheet" href="./CSS/container.css">
+    <link rel="stylesheet" href="./CSS/inputs.css">
+    <link rel="stylesheet" href="./CSS/containerMobile.css">
+    <link rel="stylesheet" href="./CSS/loading_anim.css">
     <link rel="stylesheet" href="./CSS/footer.css">
-    <link rel="stylesheet" href="/CSS/universalFontFamily.css">
+    <link rel="stylesheet" href="./CSS/universalFontFamily.css">
     <title>Gender Predictor</title>
 </head>
 
@@ -42,7 +42,7 @@
         <br />
         <div>
             <input type="text" id="name" placeholder="Enter the first name here! " />
-            <button type="button" onclick="guessTheGender()" class="btnTransform" onmousedown="btnSize(true,`.btnTransform`)"
+            <button type="button" onclick="guessTheGender()" class="btnTransform btnTypeA" onmousedown="btnSize(true,`.btnTransform`)"
             onmouseup="btnSize(false,`.btnTransform`)" 
             onmouseleave="btnSize(false,`.btnTransform`)">Predict</button>
         </div>
