--- a/weather.html
+++ b/weather.html
@@ -7,7 +7,19 @@
     <link rel="icon" href="/Assests/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <title>Weather Forecast</title>
-    <link rel="stylesheet" href="/CSS/weatherPage.css">
+    <link rel="stylesheet" href="./CSS/weatherPage.css">
+    <link rel="stylesheet" href="CSS/navbar.css">
+    <link rel="icon" href="/Assests/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./CSS/buttons.css">
+    <link rel="stylesheet" href="./CSS/tables.css">
+    <link rel="stylesheet" href="./CSS/extras.css">
+    <link rel="stylesheet" href="./CSS/container.css">
+    <link rel="stylesheet" href="./CSS/inputs.css">
+    <link rel="stylesheet" href="./CSS/historyArea.css">
+    <link rel="stylesheet" href="./CSS/containerMobile.css">
+    <link rel="stylesheet" href="./CSS/footer.css">
+    <link rel="stylesheet" href="./CSS/loading_anim.css">
+    <link rel="stylesheet" href="./CSS/universalFontFamily.css">
 </head>
 
 <body>
@@ -27,24 +39,12 @@
             </ul>
         </nav>
     </div>
-    <link rel="stylesheet" href="CSS/navbar.css">
-    <link rel="icon" href="/Assests/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="CSS/buttons.css">
-    <link rel="stylesheet" href="CSS/tables.css">
-    <link rel="stylesheet" href="CSS/extras.css">
-    <link rel="stylesheet" href="CSS/container.css">
-    <link rel="stylesheet" href="CSS/inputs.css">
-    <link rel="stylesheet" href="CSS/historyArea.css">
-    <link rel="stylesheet" href="/CSS/containerMobile.css">
-    <link rel="stylesheet" href="./CSS/footer.css">
-    <link rel="stylesheet" href="/CSS/loading_anim.css">
-    <link rel="stylesheet" href="/CSS/universalFontFamily.css">
 <div class="containerWeatherPageParent">
     <div class="container containerWeatherPageBody">
         <h3>Weather Checker</h3>
         <form class="weatherForm">
             <input type="text" class="usrInp" placeholder="Enter the city" />
-            <button type="submit" class="mainBtn"  onmousedown="btnSize(true,`.mainBtn`)"
+            <button type="submit" class="mainBtn btnTypeA"  onmousedown="btnSize(true,`.mainBtn`)"
             onmouseup="btnSize(false,`.mainBtn`)" 
             onmouseleave="btnSize(false,`.mainBtn`)">Search</button>
         </form>
@@ -65,6 +65,6 @@
         </div>
         </div>
 </body>
-<script src="/JS/weather.js"></script>
+<script src="./JS/weather.js"></script>
 <script src="./JS/buttonTransform.js"></script>
 </html>
