--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -8,15 +8,15 @@
     "/Assests/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="./CSS/navbar.css" />
-    <link rel="stylesheet" href="CSS/buttons.css">
-    <link rel="stylesheet" href="CSS/tables.css">
-    <link rel="stylesheet" href="CSS/extras.css">
-    <link rel="stylesheet" href="CSS/container.css">
-    <link rel="stylesheet" href="CSS/inputs.css">
-    <link rel="stylesheet" href="/CSS/containerMobile.css">
-    <link rel="stylesheet" href="/CSS/loading_anim.css">
+    <link rel="stylesheet" href="./CSS/buttons.css">
+    <link rel="stylesheet" href="./CSS/tables.css">
+    <link rel="stylesheet" href="./CSS/extras.css">
+    <link rel="stylesheet" href="./CSS/container.css">
+    <link rel="stylesheet" href="./CSS/inputs.css">
+    <link rel="stylesheet" href="./CSS/containerMobile.css">
+    <link rel="stylesheet" href="./CSS/loading_anim.css">
     <link rel="stylesheet" href="./CSS/footer.css">
-    <link rel="stylesheet" href="/CSS/universalFontFamily.css">
+    <link rel="stylesheet" href="./CSS/universalFontFamily.css">
     <title>Youtube Dislike Return</title>
 </head>
 
@@ -43,7 +43,7 @@
         <div>
             <label for="name">Enter Video ID :</label><br>
             <input type="text" id="name" placeholder="Enter video id here!!! " />
-            <button type="button" class="btnTransform" onmousedown="btnSize(true,`.btnTransform`)"
+            <button type="button" class="btnTransform btnTypeA" onmousedown="btnSize(true,`.btnTransform`)"
             onmouseup="btnSize(false,`.btnTransform`)" 
             onmouseleave="btnSize(false,`.btnTransform`)" onclick="dislikeReturn()">Show</button>
         </div> 
