--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
     </div>
     </div>
-    <div class="footer">
+    <div class="footer Index">
         <p>Gaurab Dhakal &copy; 2024</p>
     </div>
 </body>
