--- a/404.html
+++ b/404.html
@@ -4,50 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaurab Dhakal</title>
-    <link rel="stylesheet" href="/CSS/404.css">
+    <link rel="stylesheet" href="./CSS/404.css">
 </head>
 <body>
-    <div>
-        <nav>
-            <div class="logo">Gaurab Dhakal</div>
-        </nav>
-    </div><br>
+    <!-- Navbar -->
+    
+            <div class="logoNav">Gaurab Dhakal</div>
+    
+    <!-- // Container  -->
     <div class="container">
-        <img src="/Assests/404.svg" alt="404">
-        <span class="pageNotFoundCode">404</span>
-        <span class="pageNotFoundText">Page Not Found</span>
-        <a href="index.html" class="goBack">Go Back</a>
+        <div class="subA">
+            <img src="./Assests/logo2.png" class="logo" onclick="location.href = ('/index.html')" alt="404"><br>
+            <span><p class="textTitle"><b>404</b>     Page not found.</p></span>
+            <span><p class="textBody">The requested URL was not found.</p></span>
         </div>
-
+        <div class="subB"><img src="./Assests/svgAbs.png" class="svgAbstract" alt="svgAbstract">
+        </div>
+    </div>
 </body>
-<script>
-let iTag = document.getElementById('pMain');
-
-// function changeColor() {
-//     let randCode = Math.floor(Math.random() * (256 * 256 * 256));
-//     let hexCode = "#" + randCode.toString(16);
-//     iTag.style.backgroundColor = hexCode;
-//     console.log(randCode)
-//     console.log(hexCode)
-//     let textColor = getTextColor(hexCode);
-//     iTag.style.color = textColor;
-// }
-
-// function getTextColor(bgColor) {
-//     let r = parseInt(bgColor.slice(1, 3), 16);
-//     console.log(r)
-//     let g = parseInt(bgColor.slice(3, 5), 16);
-//     console.log(g)
-//     let b = parseInt(bgColor.slice(5, 7), 16);
-//     console.log(b)
-//     console.log("          ")
-
-//     let brightness = (0.299 * r + 0.587 * g + 0.114 * b) / 255;
-//     console.log(brightness);
-//     return brightness > 0.5 ? '#000000' : '#FFFFFF';
-// }
-
-// setInterval(changeColor, 2000);
-
-</script>
 </html>
