change in 404 error page navbar and design

--- a/404.html
+++ b/404.html
@@ -9,16 +9,24 @@
 <body>
     <!-- Navbar -->
     
+        <div class="navbarMainElem">
             <div class="logoNav">Gaurab Dhakal</div>
+            <nav>
+            <ul>
+                <li><a href="./index.html" class="active">Home</a></li>
+                <li><a href="#">About </a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav></div>
     
     <!-- // Container  -->
     <div class="container">
         <div class="subA">
-            <img src="./Assests/logo2.png" class="logo" onclick="location.href = ('/index.html')" alt="404"><br>
+            <img src="./Assests/svgAbs.png" class="logo" onclick="location.href = ('/index.html')" alt="404"><br>
             <span><p class="textTitle"><b>404</b>     Page not found.</p></span>
             <span><p class="textBody">The requested URL was not found.</p></span>
         </div>
-        <div class="subB"><img src="./Assests/svgAbs.png" class="svgAbstract" alt="svgAbstract">
+        <!-- <div class="subB"><img src="./Assests/svgAbs.png" class="svgAbstract" alt="svgAbstract"> -->
         </div>
     </div>
 </body>
