--- a/404.html
+++ b/404.html
@@ -14,8 +14,8 @@
             <nav>
             <ul>
                 <li><a href="./index.html" class="active">Home</a></li>
-                <li><a href="#">About </a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./CountryPredictor.html">Country Predictor </a></li>
+                <li><a href="./genderGuesser.html">Gender Predictor</a></li>
             </ul>
         </nav></div>
     
