small logic error fix

--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
             <div class="logoNav">Gaurab Dhakal</div>
             <nav>
             <ul>
-                <li><a href="./index.html" class="active">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./CountryPredictor.html">Country Predictor </a></li>
                 <li><a href="./genderGuesser.html">Gender Predictor</a></li>
             </ul>
