--- a/404.html
+++ b/404.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaurab Dhakal</title>
     <link rel="stylesheet" href="./CSS/404.css">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
 <body>
     <!-- Navbar -->
@@ -26,7 +28,6 @@
             <span><p class="textTitle"><b>404</b>     Page not found.</p></span>
             <span><p class="textBody">The requested URL was not found.</p></span>
         </div>
-        <!-- <div class="subB"><img src="./Assests/svgAbs.png" class="svgAbstract" alt="svgAbstract"> -->
         </div>
     </div>
 </body>
