--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
                 <li><a href="youtubeDislikeReturn.html">Youtube Dislike Return</a></li>
                 <li><a href="weather.html" >Weather Checker</a></li>
+                <li><a href="todolist.html" >Todo-List</a></li>
             </ul>
         </nav>
     </div> 
