--- a/todolist.html
+++ b/todolist.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List - Beta</title>
+    <link rel="stylesheet" href="./CSS/buttons.css">
     <link rel="stylesheet" href="./CSS/todo.css">
 </head>
 <body>
@@ -11,7 +12,7 @@
         <h3 class="headTitle">Todo List</h3>
         <form class="formMain">
             <input type="text" id="usrVal" autocomplete="off" placeholder="Title" />
-            <button type="submit" class="add btnDesign">Add</button>
+            <button id="btnAdd" class="add btnTypeA">Add</button>
         </form>
         <div class="warning"></div>
         <div id="listArea">
