some design tweaks

--- a/todolist.html
+++ b/todolist.html
@@ -34,7 +34,7 @@
             <input type="text" id="usrVal" autocomplete="off" placeholder="Title" />
             <button id="btnAdd" class="add btnTypeA">Add</button>
         </form>
-        <div class="warning"></div>
+        <div class="warning" hidden></div>
         <div id="listArea">
         </div>
         <div class="delAllSec"></div>
