--- a/todolist.html
+++ b/todolist.html
@@ -17,12 +17,12 @@
                 <i class="fas fa-bars"></i>
             </label>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="CountryPredictor.html">Country Predictor</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
                 <li><a href="youtubeDislikeReturn.html">Youtube Dislike Return</a></li>
                 <li><a href="weather.html" >Weather Checker</a></li>
-                <li><a href="todolist.html"  class="active">Todo-List</a></li>
+                <li><a href="#"  class="active">Todo-List</a></li>
             </ul>
         </nav>
     </div> 
