--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     body {
         background: fixed;
         background-size: 100% 100%;
-        background-image: url("./Assests/bgImg.jpg");
+        background-color: rgb(18, 25, 35);
+        /* background-image: url("./Assests/bgImg.jpg"); */
     }
 </style>
 <link rel="stylesheet" href="./CSS/index.css" />
