--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
     </div>
 </body>
 <script src="./JS/index._main.js" type="text/javascript"></script>
+<script src="./JS/test.js" type="text/javascript"></script>
 <script src="./JS/calcv3.js"></script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7760784539111054"
     crossorigin="anonymous"></script>
