big change announcement

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 </div>
             </div>
         </div>
+        <div class="notice">New revamped frontpage is coming soon!</div>
     </div>
     </div>
     <div class="footer Index">
