MAJOR UPDATE, NEW VERSION OF TODOLIST LIVE

--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -34,7 +34,7 @@
                 <li><a href="genderGuesser.html"  class="active">Gender Predictor</a></li>
                 <li><a href="youtubeDislikeReturn.html" >Youtube Dislike Return</a></li>
                 <li><a href="weather.html" >Weather Checker</a></li>
-                <li><a href="todolist.html" >Todo-List</a></li>
+                <li><a href="TODOLIST/index.html" >Todo-List</a></li>
             </ul>
         </nav>
     </div>
