--- a/todolist.html
+++ b/todolist.html
@@ -18,10 +18,8 @@
             </label>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="CountryPredictor.html">Country Predictor</a></li>
-                <li><a href="genderGuesser.html">Gender Predictor</a></li>
-                <li><a href="youtubeDislikeReturn.html">Youtube Dislike Return</a></li>
-                <li><a href="weather.html" >Weather Checker</a></li>
+                <li><a href="TODOLIST/index.html">New Version TODO LIST</a></li>
+                
                 <li><a href="#"  class="active">Todo-List</a></li>
             </ul>
         </nav>
