--- a/weather.html
+++ b/weather.html
@@ -36,7 +36,7 @@
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
                 <li><a href="youtubeDislikeReturn.html">Youtube Dislike Return</a></li>
                 <li><a href="#" class="active">Weather Checker</a></li>
-                <li><a href="todolist.html" >Todo-List</a></li>
+                <li><a href="TODOLIST/index.html" >Todo-List</a></li>
             </ul>
         </nav>
     </div>
