New category section design changes

--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="formParent" hidden>
                     <form class="formMain">
-                        <input type="text" id="usrVal" autocomplete="off" placeholder="Task Name" />
+                        <input type="text" id="usrVal" autocomplete="off" placeholder="Task Name" maxlength="500"/>
                         <div class="afterUsrInp">
                             <div class="categorySelectOption"></div>
                             <div class="btnsAddTask">
@@ -106,7 +106,7 @@
                 <label for="cateName">Name of the category: </label>
                 <input type="text" id="cateName" autocomplete="off" placeholder="Enter name of the category" />
                 <div class="btnsCate">
-                    <input type="button" id="cateCancelBtn" value="Back" />
+                    <input type="button" id="cateCancelBtn" value="Cancel" />
                     <input type="submit" id="cateAddBtn" value="Add" />
                 </div>
                 <p class="warningCateSection"></p>
