--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="./CSS/navbar.css" />
     <link rel="stylesheet" href="./CSS/buttons.css">
     <link rel="stylesheet" href="./CSS/tables.css">
-    <link rel="icon" href=
-    "./Assests/logo.png" type="image/x-icon">
+    <link rel="icon" href="./Assests/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./CSS/extras.css">
     <link rel="stylesheet" href="./CSS/container.css">
     <link rel="stylesheet" href="./CSS/inputs.css">
-    <link rel="stylesheet" href="./CSS/containerMobile.css">
+    <link rel="stylesheet" media='screen and (max-width: 699px)' href="./CSS/containerMobile.css">
     <link rel="stylesheet" href="./CSS/loading_anim.css">
     <link rel="stylesheet" href="./CSS/footer.css">
     <link rel="stylesheet" href="./CSS/universalFontFamily.css">
