--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </style>
 <link rel="stylesheet" href="./CSS/index.css" />
 <link rel="stylesheet" href="./CSS/navbar.css" />
-<link rel="stylesheet" href="./CSS/calcMobileDesign.css" />
+<link rel="stylesheet" media='screen and (max-width: 699px)' href="./CSS/calcMobileDesign.css" />
 <link rel="stylesheet" href="./CSS/footer.css">
 <link rel="stylesheet" href="./CSS/calcv3.css">
 <link rel="stylesheet" href="./CSS/buttons.css">
