--- a/weather.html
+++ b/weather.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./CSS/container.css">
     <link rel="stylesheet" href="./CSS/inputs.css">
     <link rel="stylesheet" href="./CSS/historyArea.css">
-    <link rel="stylesheet" href="./CSS/containerMobile.css">
+    <link rel="stylesheet" media='screen and (max-width: 699px)' href="./CSS/containerMobile.css">
     <link rel="stylesheet" href="./CSS/footer.css">
     <link rel="stylesheet" href="./CSS/loading_anim.css">
     <link rel="stylesheet" href="./CSS/universalFontFamily.css">
