--- a/todolist.html
+++ b/todolist.html
@@ -18,7 +18,7 @@
             </label>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="TODOLIST/index.html">New Version TODO LIST</a></li>
+                <li><a href="TODOLIST/index.html">Todo-List V2</a></li>
                 
                 <li><a href="#"  class="active">Todo-List</a></li>
             </ul>
