--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/Assests/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet" />
 
     <title>Gaurab Dhakal</title>
 </head>
 <style>
+    nav{
+        font-family: "Open Sans",sans-serif;
+    }
     body {
         background: fixed;
         background-size: 100% 100%;
