password generator added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="CountryPredictor.html">Country Predictor</a></li>
                 <li><a href="genderGuesser.html">Gender Predictor</a></li>
-                <li><a href="youtubeDislikeReturn.html">Youtube Dislike Return</a></li>
+                <li><a href="passwordGenerator.html">Youtube Dislike Return</a></li>
                 <li><a href="weather.html" >Weather Checker</a></li>
                 <li><a href="TODOLIST/index.html" >Todo-List</a></li>
             </ul>
