--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -20,10 +20,13 @@
     <div class="newViewExtraLayer" id="newUsrView" hidden>
         <div class="newUsrView">
             <form class="newUsrView newUsrForm">
-                <h3>Hello There, Are you ready to organize yourself?</h3>
-                <input type="text" autocomplete="off" placeholder="Enter your name here" class="newUsrInpuArea">
-                <input type="submit" value="Enter">
+                <h3>Hello there, are you ready to organize yourself?</h3>
+                <div class="inputsNew">
+                    <input type="text" autocomplete="off" placeholder="Enter your name here" class="newUsrInpuArea">
+                    <input type="submit" value="Login">
+                </div>
                 <p class="warningAreaN"></p>
+                <p class="infoOfStorage">Note: Everything is store locally so clearing browser's data will cause in complete data loss!</p>
             </form>
         </div>
     </div>
@@ -101,7 +104,7 @@
     <div class="newCateFormParentElem" hidden>
         <div class="AddCategoryPopUP">
             <form id="newCategoryForm">
-                <label for="cateName">Name of the category: </label>
+                <label for="cateName">Category name: </label>
                 <input type="text" id="cateName" autocomplete="off" placeholder="Enter name of the category" />
                 <div class="btnsCate">
                     <input type="button" id="cateCancelBtn" value="Cancel" />
