Fix typo in infoOfStorage message

--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -26,7 +26,7 @@
                     <input type="submit" value="Login">
                 </div>
                 <p class="warningAreaN"></p>
-                <p class="infoOfStorage">Note: Everything is store locally so clearing browser's data will cause in complete data loss!</p>
+                <p class="infoOfStorage">Note: Everything is stored locally so clearing browser's data will cause in the complete data loss!</p>
             </form>
         </div>
     </div>
