--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./CSS/todo.css">
     <link rel="stylesheet" href="./CSS/navbar.css">
     <link rel="stylesheet" href="./CSS/customSelect.css">
+    <link rel="stylesheet" href="./CSS/mobileui.css">
     <link rel="stylesheet" href="./CSS/sidebar.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
@@ -62,7 +63,7 @@
                     
                 </div>
             </div>
-            <div class="CategoryShowSection"></div>
+            <div class="categoryShowSection"></div>
             <div class="MainAllParent">
                 
             <div class="MainAll">
