--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Management System</title>
     <link rel="stylesheet" href="./CSS/todo.css">
-    <link rel="stylesheet" href="./CSS/navbar.css">
     <link rel="stylesheet" href="./CSS/customSelect.css">
     <link rel="stylesheet" href="./CSS/mobileui.css">
     <link rel="stylesheet" href="./CSS/sidebar.css">
@@ -16,7 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,500,1,-25" />
-
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <body>
     <div class="newViewExtraLayer" id="newUsrView" hidden>
         <div class="newUsrView">
