Update sidebar and todo styles, add handleNoListMsg.js

--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -51,7 +51,7 @@
                         </div>
                         <div class="iconOfCategoryAdd">
                             <div class="toBeHiddenAfterCollapse">
-                                <p class="">Add Category</p>
+                                <p class="add-cate-title">New Category</p>
                             </div>
                             <span class="material-symbols-rounded" id="addMSR">
                                 add
@@ -93,8 +93,6 @@
                 <div class="delAllSec"></div>
                 <div id="noListMessage">
                     <div class="noListMessage">
-                        <h3>You are all done for today!</h3>
-                        <p>Enjoy the rest of the day!</p>
                     </div>
                 </div>
             </div>
@@ -121,6 +119,7 @@
 <script src="./JS/categoryhandle.js"></script>
 <script src="./JS/logout.js"></script>
 <script src="./JS/handleAddNewPre.js"></script>
+<script src="./JS/handleNoListMsg.js"></script>
 <script src="./JS/handleSideBarToggle.js"></script>
 
 </html>
