Update handleNoListMsg.js and index.html

--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -103,7 +103,7 @@
         <div class="AddCategoryPopUP">
             <form id="newCategoryForm">
                 <label for="cateName">Category name: </label>
-                <input type="text" id="cateName" minlength="3" autocomplete="off" placeholder="Enter name of the category" />
+                <input type="text" id="cateName" minlength="3" maxlength="60" autocomplete="off" placeholder="Enter name of the category" />
                 <div class="btnsCate">
                     <input type="button" id="cateCancelBtn" value="Cancel" />
                     <input type="submit" id="cateAddBtn" value="Add" />
