--- a/TODOLIST/index.html
+++ b/TODOLIST/index.html
@@ -9,14 +9,13 @@
     <link rel="stylesheet" href="./CSS/customSelect.css">
     <link rel="stylesheet" href="./CSS/mobileui.css">
     <link rel="stylesheet" href="./CSS/sidebar.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,500,1,-25" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-<body>
+        <body>
     <div class="newViewExtraLayer" id="newUsrView" hidden>
         <div class="newUsrView">
             <form class="newUsrView newUsrForm">
@@ -101,8 +100,8 @@
     </div>
     <div class="newCateFormParentElem" hidden>
         <div class="AddCategoryPopUP">
-            <form id="newCategoryForm">
-                <label for="cateName">Category name: </label>
+            <form id="newCategoryForm" onsubmit="handleNewCateSubmission(event)">
+                <h4 class="titleOfNewCategory">Category name: </h4>
                 <input type="text" id="cateName" minlength="3" maxlength="60" autocomplete="off" placeholder="Enter name of the category" />
                 <div class="btnsCate">
                     <input type="button" id="cateCancelBtn" value="Cancel" />
